--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "goit-node-cli",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -21,5 +20,6 @@
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2"
-  }
+  },
+  "description": ""
 }
